--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Um Curriculo</title>
+    <title> Curriculo </title>
   </head>
   <body>
     <div id="root"></div>
